--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon --watch 'src/**' --ext 'ts,json' --exec 'npm run build && npm run start'",
     "build": "tsc",
     "start": "node dist/index.js",
-    "db:seed": "npx prisma db seed"
+    "db:seed": "npx prisma db seed",
+    "lint": "npx eslint ."
   },
   "author": "Google LLC",
   "license": "Apache-2.0",
@@ -25,14 +26,16 @@
     "zod": "^4.1.11"
   },
   "devDependencies": {
+    "@eslint/js": "^9.36.0",
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.3",
-    "@types/express-rate-limit": "^6.0.2",
     "@types/helmet": "^4.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.17",
+    "eslint": "^9.36.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.44.1"
   }
 }
