--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ PORT=3000
 DATABASE_URL="postgresql://postgres:password@localhost:5432/test"
 
 # JWT Secrets
-JWT_ACCESS_SECRET="your-super-secret-access-key"
+JWT_SECRET="your-super-secret-access-key"
 JWT_REFRESH_SECRET="your-super-secret-refresh-key"
