--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     build: .
     environment:
       DATABASE_URL: postgresql://user:password@db:5432/dev
-      JWT_ACCESS_SECRET: your_jwt_access_secret
+      JWT_SECRET: your_jwt_access_secret
       JWT_REFRESH_SECRET: your_jwt_refresh_secret
       ADMIN_PASSWORD: adminpassword
     ports:
